[project]
name = "book-langchain-langgraph-rag-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langchain-text-splitters>=0.3.8",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
